<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fondo"
    android:layout_width="match_parent"
    android:layout_height="90sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewM"
        android:layout_width="350sp"
        android:layout_height="70dp"
        android:layout_margin="10sp"
        android:elevation="5sp"
        app:cardCornerRadius="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bordercarditems"
            android:backgroundTint="#86949E"
            >

            <TextView
                android:id="@+id/descriptionM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="38dp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewM"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewM"
                android:layout_width="53dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_done" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.38"
                app:srcCompat="@drawable/ic_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>