<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".fragmentos.Audio">


        <TextView
            android:id="@+id/textview_sound_recorder_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/grabar_audio"
            android:textColor="#000"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="111dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_sound_recorder_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="289dp"
        android:src="@drawable/ic_mic_none"
        app:layout_constraintEnd_toStartOf="@+id/btnStop"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="125dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_sound_recorder_heading"
        android:layout_alignParentStart="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="222dp"
        android:src="@drawable/ic_stop_circle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="126dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_sound_recorder_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="222dp"
        android:src="@drawable/ic_play_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="126dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescripcionNota"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="84dp"
        android:text="@string/guardar"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="251dp" />

    <EditText
        android:id="@+id/txtDescripcionNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_sound_recorder_heading"
        android:layout_marginStart="120dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="190dp" />
</RelativeLayout>
